Refactor5: Fix css , text-align for reason KAF005

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/shr/kaf005.share.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/shr/kaf005.share.style.css
@@ -30,7 +30,7 @@
 }
 /*Set Width*/
 input.nts-editor.nts-input.reset-element {
-	text-align: center;
+	text-align: left !important;
 	width: 85px;
 }
 
